--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Laravel</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
 								<article>
