Adding links to index page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Laravel</a></h3>
+										<h3><a href="laravel.html" class="link">Laravel</a></h3>
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
@@ -74,17 +74,17 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Lumen</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="lumen.html" class="link">Lumen</a></h3>
+										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Angular</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="angular.html" class="link">Angular</a></h3>
+										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
 								<article>
@@ -92,8 +92,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Vue</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="vue.html" class="link">Vue</a></h3>
+										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
 								<article>
@@ -101,8 +101,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Spring Boot</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="springboot.html" class="link">Spring Boot</a></h3>
+										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
 								<article>
@@ -110,8 +110,8 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Apache Cordova</a></h3>
-										<p>Feugiat amet tempus</p>
+										<h3><a href="apachecordova.html" class="link">Apache Cordova</a></h3>
+										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
 							</section>
@@ -124,7 +124,7 @@
 									</header>
 									<p>I am a very passionate developer with wealth of experience in Software Engineering, DevOps Engineering, MobileApplication Development (Apache Cordova), USSD Applications Development, WebApplication Development, Linus Systems Configuration & Administration,  windows server 2012.I holds a BSc. (Hons) in Computer Science and Engineering from the University of Mines and Technology.</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Check this out</a></li>
+										<li><a href="#" class="button next">Check this out</a></li>
 									</ul>
 								</div>
 							</section>
@@ -190,8 +190,8 @@
 						<div class="inner">
 							<ul class="icons">
 								
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/nanakwafo/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/kwafo-mensah-4b0902118/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="#">NANA KWAFO MENSAH</a></li>
