added a laravel page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Software</strong> <span>Developer(PHP/JAVA)</span></a>
+						<a href="index.html" class="logo"><strong>Software</strong> <span>Developer(PHP/JAVASCRIPT)</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -49,7 +49,7 @@
 								<p>Never get bored Developing software applications.<br />
 								I really enjoy what i do</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">My Portfolio</a></li>
+									<li><a href="#one" class="button next scrolly">My Tech Stack Portfolio</a></li>
 								</ul>
 							</div>
 						</div>
