--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Kwafo Nana</title>
+		<title>Kwafodev</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -47,7 +47,7 @@
 							</header>
 							<div class="content">
 								<p>Never get bored Developing software applications.<br />
-								I really enjoy what i do</p>
+								</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">My Tech Stack Portfolio</a></li>
 								</ul>
