--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="lumen.html" class="link">Lumen</a></h3>
+										<h3><a href="lumen.html" class="link">Python</a></h3>
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
@@ -83,7 +83,7 @@
 										<img src="/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="angular.html" class="link">Angular</a></h3>
+										<h3><a href="angular.html" class="link">Flutter</a></h3>
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
@@ -92,7 +92,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="vue.html" class="link">Vue</a></h3>
+										<h3><a href="vue.html" class="link">Angular</a></h3>
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
@@ -101,7 +101,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="springboot.html" class="link">Spring Boot</a></h3>
+										<h3><a href="springboot.html" class="link">Docker</a></h3>
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
@@ -110,7 +110,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="apachecordova.html" class="link">Apache Cordova</a></h3>
+										<h3><a href="apachecordova.html" class="link">Kubernetes</a></h3>
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
