--- a/index.html
+++ b/index.html
@@ -114,6 +114,24 @@
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="laravel.html" class="link">C++</a></h3>
+										<p>Click,to see great stuff!</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic02.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="lumen.html" class="link">Git</a></h3>
+										<p>Click,to see great stuff!</p>
+									</header>
+								</article>
 							</section>
 
 						<!-- Two -->
