--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="laravel.html" class="link">Laravel</a></h3>
+										<h3><a href="solutions.html" class="link">Laravel</a></h3>
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
@@ -119,7 +119,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="laravel.html" class="link">C++</a></h3>
+										<h3><a href="solutions.html" class="link">C++</a></h3>
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
