--- a/solutions.html
+++ b/solutions.html
@@ -20,24 +20,19 @@
     <!-- Header -->
     <!-- Note: The "styleN" class below should match that of the banner element. -->
     <header id="header" class="alt style2">
-        <a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+        <a href="index.html" class="logo"><strong>Full Stack </strong> <span>Developer</span></a>
         <nav>
             <a href="#menu">Menu</a>
         </nav>
     </header>
-
     <!-- Menu -->
     <nav id="menu">
         <ul class="links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="landing.html">Landing</a></li>
-            <li><a href="generic.html">Generic</a></li>
-            <li><a href="elements.html">Elements</a></li>
+            <li><a href="solutions.html">solutions</a></li>
+            <li><a href="blog.html">Blog</a></li>
         </ul>
-        <ul class="actions stacked">
-            <li><a href="#" class="button primary fit">Get Started</a></li>
-            <li><a href="#" class="button fit">Log In</a></li>
-        </ul>
+
     </nav>
 
     <!-- Banner -->
