--- a/solutions.html
+++ b/solutions.html
@@ -46,8 +46,8 @@
                 <h1>A Showcase of my projects and Abilities </h1>
             </header>
             <div class="content">
-                <p>Lorem ipsum dolor sit amet nullam consequat<br />
-                    sed veroeros. tempus adipiscing nulla.</p>
+                <p>NEVER GET BORED DEVELOPING SOFTWARE APPLICATIONS.<br />
+                   </p>
             </div>
         </div>
     </section>
