--- a/solutions.html
+++ b/solutions.html
@@ -55,15 +55,15 @@
     <!-- Main -->
     <div id="main">
 
-        <!-- One -->
-        <section id="one">
-            <div class="inner">
-                <header class="major">
-                    <h2>Crude Oil Processing tool</h2>
-                </header>
-                <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
-            </div>
-        </section>
+        <!--&lt;!&ndash; One &ndash;&gt;-->
+        <!--<section id="one">-->
+            <!--<div class="inner">-->
+                <!--<header class="major">-->
+                    <!--<h2>Crude Oil Processing tool</h2>-->
+                <!--</header>-->
+                <!--<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>-->
+            <!--</div>-->
+        <!--</section>-->
 
         <!-- Two -->
         <section id="two" class="spotlights">
