--- a/solutions.html
+++ b/solutions.html
@@ -78,7 +78,7 @@
                         </header>
                         <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
                         <ul class="actions">
-                            <li><a href="generic.html" class="button">Learn more</a></li>
+                            <li><a href="generic.html" class="fa-list">Learn more</a></li>
                         </ul>
                     </div>
                 </div>
