--- a/solutions.html
+++ b/solutions.html
@@ -82,6 +82,10 @@
                             <li class="fa-list">Monolitic Architecture</li>
                             <li class="fa-list">MySql Server </li>
                             <li class="fa-list">Git</li>
+                            <li class="fa-list">JQuery</li>
+                            <ul class="actions">
+                                <li><a href="generic.html" class="button">view Application</a></li>
+                            </ul>
 
                         </ul>
                     </div>
