--- a/solutions.html
+++ b/solutions.html
@@ -83,6 +83,7 @@
                             <li class="fa-list">MySql Server </li>
                             <li class="fa-list">Git</li>
                             <li class="fa-list">JQuery</li>
+                            <li class="fa-list">Vanila Javascript</li>
                             <ul class="actions">
                                 <li><a href="generic.html" class="button">view Application</a></li>
                             </ul>
