--- a/solutions.html
+++ b/solutions.html
@@ -84,6 +84,7 @@
                             <li class="fa-list">Git</li>
                             <li class="fa-list">JQuery</li>
                             <li class="fa-list">Vanila Javascript</li>
+                            <li class="fa-list">AWS Elastic Beanstalk</li>
 
 
                         </ul>
