--- a/solutions.html
+++ b/solutions.html
@@ -85,6 +85,7 @@
                             <li class="fa-list">JQuery</li>
                             <li class="fa-list">Vanila Javascript</li>
                             <li class="fa-list">AWS Elastic Beanstalk</li>
+                            <li class="fa-list">AWS RouteS3</li>
 
 
                         </ul>
