open link in new tab

--- a/solutions.html
+++ b/solutions.html
@@ -91,7 +91,7 @@
 
                         </ul>
                         <ul class="actions">
-                            <li><a href="http://crude-env.sse8r8qfq2.us-east-2.elasticbeanstalk.com/" class="button">view Application</a></li>
+                            <li><a href="http://crude-env.sse8r8qfq2.us-east-2.elasticbeanstalk.com/"  target="_blank" class="button">view Application</a></li>
                         </ul>
                     </div>
                 </div>
