finalize front page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Full Stack </strong> <span>Developer</span></a>
+						<a href="index.html" class="logo"><strong>Full Stack </strong> <span>Engineer/Developer</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -30,7 +30,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="solutions.html">solutions</a></li>
-							<li><a href="blog.html">Blog</a></li>
+
 
 						</ul>
 
@@ -43,7 +43,7 @@
 								<h1>Hi, my name is Kwafo Nana Mensah</h1>
 							</header>
 							<div class="content">
-								<p>Never get bored Developing software applications.<br />
+								<p>Problem Solver ,Innovator, Quick Learner<br />
 								</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">My Tech Stack Portfolio</a></li>
@@ -62,7 +62,16 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="solutions.html" class="link">Laravel</a></h3>
+										<h3><a href="solutions.html" class="link">Programming Languages</a></h3>
+										<h6><ul>
+											<li>PHP 7.0</li>
+											<li>Javascript/Ajax</li>
+											<li>Dart</li>
+											<li>C++</li>
+											<li>Html/Css</li>
+											<li>python</li>
+											<li>YAML/XML/JSON</li>
+										</ul></h6>
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
@@ -71,7 +80,18 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="lumen.html" class="link">Python</a></h3>
+										<h3><a href="solutions.html" class="link">Web and app development frameworks</a></h3>
+										<h6><ul>
+											<li>Laravel </li>
+											<li>Cake</li>
+											<li>Codeigniter</li>
+											<li>Flutter</li>
+											<li>Apache Cordova</li>
+											<li>Bootstrap</li>
+											<li>Framework7</li>
+
+
+										</ul></h6>
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
@@ -80,7 +100,17 @@
 										<img src="/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="angular.html" class="link">Flutter</a></h3>
+										<h3><a href="solutions.html" class="link">Database Technologies and tools</a></h3>
+										<h6><ul>
+											<li>Mysql </li>
+											<li>Microsoft sql server</li>
+											<li>Dynamodb</li>
+											<li>Flutter</li>
+											<li>Firebase</li>
+
+
+
+										</ul></h6>
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
@@ -89,7 +119,19 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="vue.html" class="link">Angular</a></h3>
+										<h3><a href="solutions.html" class="link">DeVop /OS/web servers Tools Experience</a></h3>
+										<h6><ul>
+											<li>Git/Nginx/Apache</li>
+											<li>Docker(Community && Enterprice)</li>
+											<li>Kubernetes(training)</li>
+											<li>Jenkins(training)</li>
+											<li>Linux</li>
+											<li>Windows</li>
+
+
+
+
+										</ul></h6>
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
@@ -98,7 +140,17 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="springboot.html" class="link">Docker</a></h3>
+										<h3><a href="solutions.html" class="link">Software Architecture Experience</a></h3>
+										<h6><ul>
+											<li>MVC Architecture</li>
+											<li>Monolitic Architecture</li>
+											<li>Microservices</li>
+
+
+
+
+
+										</ul></h6>
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
@@ -107,28 +159,21 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="apachecordova.html" class="link">Kubernetes</a></h3>
+										<h3><a href="solutions.html" class="link">Cloud Technologies experience</a></h3>
+										<h6><ul>
+											<li>AWS Compute</li>
+											<li>AWS RDS</li>
+											<li>AWS Storage</li>
+
+
+
+
+
+										</ul></h6>
 										<p>Click,to see great stuff!</p>
 									</header>
 								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="solutions.html" class="link">C++</a></h3>
-										<p>Click,to see great stuff!</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="lumen.html" class="link">Git</a></h3>
-										<p>Click,to see great stuff!</p>
-									</header>
-								</article>
+
 							</section>
 
 						<!-- Two -->
@@ -137,9 +182,12 @@
 									<header class="major">
 										<h2>Profile</h2>
 									</header>
-									<p>I am a very passionate developer with wealth of experience in Software Engineering, DevOps Engineering, MobileApplication Development (Apache Cordova), USSD Applications Development, WebApplication Development, Linus Systems Configuration & Administration,  windows server 2012.I holds a BSc. (Hons) in Computer Science and Engineering from the University of Mines and Technology.</p>
+									<p>I am a very smart and passionate developer with wealth of experience in Software Engineering, DevOps Engineering, MobileApplication Development (Apache Cordova), USSD Applications Development, WebApplication Development, Linus Systems Configuration & Administration,  windows server 2012.
+										I holds a BSc. (Hons) in Computer Science and Engineering from the University of Mines and Technology.</p>
 									<ul class="actions">
-										<li><a href="#" class="button next">Check this out</a></li>
+
+										<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/bsc.pdf" class="button next">University Certificate </a></li>
+										<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/naric.pdf" class="button next">UK Naric Certificate </a></li>
 									</ul>
 								</div>
 							</section>
@@ -206,7 +254,7 @@
 							<ul class="icons">
 								
 								<li><a href="https://github.com/nanakwafo/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/kwafo-mensah-4b0902118/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/kwafodev/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="#">NANA KWAFO MENSAH</a></li>
