--- a/solutions.html
+++ b/solutions.html
@@ -46,7 +46,7 @@
                 <h1>A Showcase of my projects and Abilities </h1>
             </header>
             <div class="content">
-                <p>NEVER GET BORED DEVELOPING SOFTWARE APPLICATIONS.<br />
+                <p>Problem Solver ,Innovator, Quick Learner<br />
                    </p>
             </div>
         </div>
@@ -55,20 +55,12 @@
     <!-- Main -->
     <div id="main">
 
-        <!--&lt;!&ndash; One &ndash;&gt;-->
-        <!--<section id="one">-->
-            <!--<div class="inner">-->
-                <!--<header class="major">-->
-                    <!--<h2>Crude Oil Processing tool</h2>-->
-                <!--</header>-->
-                <!--<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>-->
-            <!--</div>-->
-        <!--</section>-->
+
 
         <!-- Two -->
         <section id="two" class="spotlights">
             <section>
-                <a href="generic.html" class="image">
+                <a href="#" class="image">
                     <img src="images/pic08.jpg" alt="" data-position="center center" />
                 </a>
                 <div class="content">
@@ -77,21 +69,24 @@
                             <h3>Crude Oil processing tool</h3>
                         </header>
                         <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-                        <ul class="actions">
-                            <li class="fa fa-angle-right">Laravel</li>
-                            <li class="fa fa-angle-right">Monolitic Architecture</li>
-                            <li class="fa fa-angle-right">MySql Server </li>
-                            <li class="fa fa-angle-right">Ajax</li>
-                            <li class="fa fa-angle-right">Git</li>
-                            <li class="fa fa-angle-right">JQuery</li>
-                            <li class="fa fa-angle-right">Vanila Javascript</li>
-                            <li class="fa fa-angle-right">AWS Elastic Beanstalk</li>
-                            <li class="fa fa-angle-right">AWS RouteS3</li>
 
+                        <h6>
+                            <ul class="actions">
+                            <li>Laravel</li>
+                            <li>Monolitic Architecture</li>
+                            <li>MySql Server </li>
+                            <li>Ajax</li>
+                            <li>Git</li>
+                            <li>Javascript/JQuery</li>
+                            <li>Vanila Javascript</li>
+                            <li>AWS Elastic Beanstalk</li>
+                            <li>AWS RouteS3</li>
+                        </ul></h6>
 
-                        </ul>
                         <ul class="actions">
-                            <li><a href="http://crude-env.sse8r8qfq2.us-east-2.elasticbeanstalk.com/"  target="_blank" class="button">view Application</a></li>
+                            <li><a href="http://crude-env.sse8r8qfq2.us-east-2.elasticbeanstalk.com/"  target="_blank" class="button">View Application</a></li>
+                            <li><a href="#"  target="_blank" class="button">Source Code</a></li>
+                            <li><a href="#"  target="_blank" class="button">Application Archt/Design</a></li>
                         </ul>
                     </div>
                 </div>
@@ -103,47 +98,37 @@
                 <div class="content">
                     <div class="inner">
                         <header class="major">
-                            <h3>Rhoncus magna</h3>
+                            <h3>Inventory Management Application</h3>
                         </header>
                         <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+                        <h6>
+                            <ul class="actions">
+                                <li>Laravel</li>
+                                <li>Monolitic Architecture</li>
+                                <li>MySql Server </li>
+                                <li>Ajax</li>
+                                <li>Docker</li>
+                                <li>Javascript/JQuery/Ajax</li>
+
+                                <li>AWS EC2 Ubuntu server</li>
+                                <li>AWS RouteS3</li>
+                            </ul></h6>
+
                         <ul class="actions">
-                            <li><a href="generic.html" class="button">Learn more</a></li>
+                            <li><a href="http://13.59.4.27:8088/"  target="_blank" class="button">view Application</a></li>
+                            <li><a href="#"  target="_blank" class="button">Source Code</a></li>
+                            <li><a href="#"  target="_blank" class="button">Application Archt/Design</a></li>
                         </ul>
                     </div>
                 </div>
             </section>
-            <section>
-                <a href="generic.html" class="image">
-                    <img src="images/pic10.jpg" alt="" data-position="25% 25%" />
-                </a>
-                <div class="content">
-                    <div class="inner">
-                        <header class="major">
-                            <h3>Sed nunc ligula</h3>
-                        </header>
-                        <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-                        <ul class="actions">
-                            <li><a href="generic.html" class="button">Learn more</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
+
         </section>
 
-        <!-- Three -->
-        <section id="three">
-            <div class="inner">
-                <header class="major">
-                    <h2>Massa libero</h2>
-                </header>
-                <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-                <ul class="actions">
-                    <li><a href="generic.html" class="button next">Get Started</a></li>
-                </ul>
-            </div>
-        </section>
+
 
     </div>
+
 
     <!-- Contact -->
     <section id="contact">
@@ -175,44 +160,47 @@
                     <div class="contact-method">
                         <span class="icon alt fa-envelope"></span>
                         <h3>Email</h3>
-                        <a href="#">information@untitled.tld</a>
+                        <a href="#">nanamensah1140@gmail.com</a>
+                        <a href="#">nanamensah1150@gmail.com</a>
                     </div>
                 </section>
                 <section>
                     <div class="contact-method">
                         <span class="icon alt fa-phone"></span>
                         <h3>Phone</h3>
-                        <span>(000) 000-0000 x12387</span>
+                        <span>07950199283</span>
                     </div>
                 </section>
                 <section>
                     <div class="contact-method">
                         <span class="icon alt fa-home"></span>
                         <h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
+										<span>233 Cartmell Drive<br />
+										Leeds<br />
+										United kingdom</span>
                     </div>
                 </section>
             </section>
         </div>
     </section>
 
+
     <!-- Footer -->
     <footer id="footer">
         <div class="inner">
             <ul class="icons">
 
-                <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-                <li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://github.com/nanakwafo/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="https://www.linkedin.com/in/kwafodev/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
             </ul>
             <ul class="copyright">
-                <li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+                <li>&copy; Untitled</li><li>Design: <a href="#">NANA KWAFO MENSAH</a></li>
             </ul>
         </div>
     </footer>
 
 </div>
+
 
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
