adding links to the application

--- a/solutions.html
+++ b/solutions.html
@@ -68,7 +68,9 @@
                         <header class="major">
                             <h3>Crude Oil processing tool</h3>
                         </header>
-                        <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+                        <p>
+                            <!--Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.-->
+                        </p>
 
                         <h6>
                             <ul class="actions">
@@ -100,7 +102,8 @@
                         <header class="major">
                             <h3>Inventory Management Application</h3>
                         </header>
-                        <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+                        <p>
+                            <!--Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>-->
                         <h6>
                             <ul class="actions">
                                 <li>Laravel</li>
@@ -183,24 +186,21 @@
             </section>
         </div>
     </section>
-
-
     <!-- Footer -->
     <footer id="footer">
         <div class="inner">
             <ul class="icons">
 
-                <li><a href="https://github.com/nanakwafo/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-                <li><a href="https://www.linkedin.com/in/kwafodev/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
             </ul>
             <ul class="copyright">
-                <li>&copy; Untitled</li><li>Design: <a href="#">NANA KWAFO MENSAH</a></li>
+                <li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
             </ul>
         </div>
     </footer>
 
 </div>
-
 
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
