--- a/solutions.html
+++ b/solutions.html
@@ -191,11 +191,11 @@
         <div class="inner">
             <ul class="icons">
 
-                <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-                <li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://github.com/nanakwafo/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="https://www.linkedin.com/in/kwafodev/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
             </ul>
             <ul class="copyright">
-                <li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+                <li>&copy; Untitled</li><li>Design: <a href="#">NANA KWAFO MENSAH</a></li>
             </ul>
         </div>
     </footer>
