--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 
 										<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/bsc.pdf" class="button next">University Certificate </a></li>
 										<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/naric.pdf" class="button next">UK Naric Certificate </a></li>
+										<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/cv-kwafonanamensah.pdf" class="button next">CV </a></li>
 									</ul>
 								</div>
 							</section>
@@ -253,7 +254,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								
+
 								<li><a href="https://github.com/nanakwafo/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/kwafodev/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
