--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 										<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/bsc.pdf" class="button next">University Certificate </a></li>
 										<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/naric.pdf" class="button next">UK Naric Certificate </a></li>
-										<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/cv-kwafonanamensah.pdf" class="button next">CV </a></li>
+										<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/cv-kwafonanamensah.pdf" class="button next"> </a>Curriculum Vitae</li>
 									</ul>
 								</div>
 							</section>
