making responsive button

--- a/index.html
+++ b/index.html
@@ -185,12 +185,29 @@
 									</header>
 									<p>I am a very smart and passionate developer with wealth of experience in Software Engineering, DevOps Engineering, MobileApplication Development (Apache Cordova), USSD Applications Development, WebApplication Development, Linus Systems Configuration & Administration,  windows server 2012.
 										I holds a BSc. (Hons) in Computer Science and Engineering from the University of Mines and Technology.</p>
-									<ul class="actions">
 
-										<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/bsc.pdf" class="button next">University Certificate </a></li>
-										<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/naric.pdf" class="button next">UK Naric Certificate </a></li>
-										<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/cv-kwafonanamensah.pdf" class="button next"> Curriculum Vitae</a></li>
-									</ul>
+									<div class="row">
+
+										<div class="col-4 col-12-small">
+											<ul class="actions stacked">
+
+												<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/bsc.pdf" class="button fit">University Certificate</a></li>
+											</ul>
+										</div>
+										<div class="col-4 col-12-small">
+											<ul class="actions stacked">
+
+												<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/naric.pdf" class="button fit">UK Naric Certificate</a></li>
+											</ul>
+										</div>
+										<div class="col-4 col-12-small">
+											<ul class="actions stacked">
+
+												<li><a href="https://kwafodevportfolio.s3.us-east-2.amazonaws.com/cv-kwafonanamensah.pdf" class="button fit">Curriculum Vitae</a></li>
+											</ul>
+										</div>
+									</div>
+
 								</div>
 							</section>
 
