--- a/solutions.html
+++ b/solutions.html
@@ -20,17 +20,17 @@
     <!-- Header -->
     <!-- Note: The "styleN" class below should match that of the banner element. -->
     <header id="header" class="alt style2">
-        <a href="index.html" class="logo"><strong>Full Stack </strong> <span>Developer</span></a>
+        <a href="index.html" class="logo"><strong>Full Stack </strong> <span>Engineer/Developer</span></a>
         <nav>
             <a href="#menu">Menu</a>
         </nav>
-    </header>dcker
+    </header>
     <!-- Menu -->
     <nav id="menu">
         <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a href="solutions.html">solutions</a></li>
-            <li><a href="blog.html">Blog</a></li>
+
         </ul>
 
     </nav>
@@ -40,7 +40,7 @@
     <section id="banner" class="style2">
         <div class="inner">
 							<span class="image">
-								<img src="images/pic07.jpg" alt="" />
+								<img src="" alt="" />
 							</span>
             <header class="major">
                 <h1>A Showcase of my projects and Abilities </h1>
@@ -53,7 +53,7 @@
     </section>
 
     <!-- Main -->
-    <div id="main">
+    <div id="main" class="alt">
 
 
 
@@ -61,7 +61,7 @@
         <section id="two" class="spotlights">
             <section>
                 <a href="#" class="image">
-                    <img src="images/pic08.jpg" alt="" data-position="center center" />
+                    <img src="images/DMT.png" alt="" data-position="center center" />
                 </a>
                 <div class="content">
                     <div class="inner">
@@ -69,33 +69,49 @@
                             <h3>Crude Oil processing tool</h3>
                         </header>
                         <p>
+
                             <!--Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.-->
                         </p>
+                        <div class="col-12 col-12-small">
 
-                        <h6>
-                            <ul class="actions">
-                            <li>Laravel</li>
-                            <li>Monolitic Architecture</li>
-                            <li>MySql Server </li>
-                            <li>Ajax</li>
-                            <li>Git</li>
-                            <li>Javascript/JQuery</li>
-                            <li>Vanila Javascript</li>
-                            <li>AWS Elastic Beanstalk</li>
-                            <li>AWS RouteS3</li>
-                        </ul></h6>
+                            <h6>
+                                <ul >
+                                    <li>Laravel,Monolitic Architecture,MySql Server,MySql Server,Ajax,Docker</li>
+                                    <li>AWS Elastic BeanStalk,AWS RouteS3,Javascript/JQuery/Ajax</li>
 
-                        <ul class="actions">
-                            <li><a href="http://crude-env.sse8r8qfq2.us-east-2.elasticbeanstalk.com/"  target="_blank" class="button">View Application</a></li>
-                            <li><a href="#"  target="_blank" class="button">Source Code</a></li>
-                            <li><a href="#"  target="_blank" class="button">Application Archt/Design</a></li>
-                        </ul>
+                                </ul></h6>
+
+
+
+                        </div>
+                        <div class="row">
+
+                            <div class="col-4 col-12-small">
+                                <ul class="actions stacked">
+
+                                    <li><a href="http://crude-env.sse8r8qfq2.us-east-2.elasticbeanstalk.com/" class="button fit">View App</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-4 col-12-small">
+                                <ul class="actions stacked">
+
+                                    <li><a href="https://github.com/nanakwafo/dmt" class="button fit">code</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-4 col-12-small">
+                                <ul class="actions stacked">
+
+                                    <li><a href="#" class="button fit">App Design</a></li>
+                                </ul>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </section>
             <section>
-                <a href="generic.html" class="image">
-                    <img src="images/pic09.jpg" alt="" data-position="top center" />
+                <a href="#" class="image">
+                    <img src="images/invent.png" alt="" data-position="top center" />
                 </a>
                 <div class="content">
                     <div class="inner">
@@ -104,24 +120,42 @@
                         </header>
                         <p>
                             <!--Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>-->
-                        <h6>
-                            <ul class="actions">
-                                <li>Laravel</li>
-                                <li>Monolitic Architecture</li>
-                                <li>MySql Server </li>
-                                <li>Ajax</li>
-                                <li>Docker</li>
-                                <li>Javascript/JQuery/Ajax</li>
 
-                                <li>AWS EC2 Ubuntu server</li>
-                                <li>AWS RouteS3</li>
+                        <div class="col-12 col-12-small">
+
+                        <h6>
+                            <ul >
+                                <li>Laravel,Monolitic Architecture,MySql Server,MySql Server,Ajax,Docker</li>
+                                <li>AWS EC2 Ubuntu server,AWS RouteS3,Javascript/JQuery/Ajax</li>
+
                             </ul></h6>
 
-                        <ul class="actions">
-                            <li><a href="http://13.59.4.27:8088/"  target="_blank" class="button">view Application</a></li>
-                            <li><a href="#"  target="_blank" class="button">Source Code</a></li>
-                            <li><a href="#"  target="_blank" class="button">Application Archt/Design</a></li>
-                        </ul>
+
+
+                        </div>
+
+                        <div class="row">
+
+                            <div class="col-4 col-12-small">
+                                <ul class="actions stacked">
+
+                                    <li><a href="http://13.59.4.27:8088/" class="button fit">View App</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-4 col-12-small">
+                                <ul class="actions stacked">
+
+                                    <li><a href="https://github.com/nanakwafo/inventoryapp" class="button fit">code</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-4 col-12-small">
+                                <ul class="actions stacked">
+
+                                    <li><a href="#" class="button fit">App Design</a></li>
+                                </ul>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </section>
