add projects description

--- a/solutions.html
+++ b/solutions.html
@@ -69,9 +69,17 @@
                             <h3>Crude Oil processing tool</h3>
                         </header>
                         <p>
+                            This is a bespoke web application designed using the monolithic architecture of software development.its main functionality is to generate custom reports after crude oil data from their various clients side are entered into the system.
 
-                            <!--Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.-->
-                        </p>
+                            The application is deployed on windows server in-house for the client, which is  still in use and increasing productivity .
+
+                            A prototype of the application is what I have deployed here on my aws ec2 instance with dummy data.
+
+                            Below are the login credentials 
+
+                            Username:admin
+
+                            Password:12345    </p>
                         <div class="col-12 col-12-small">
 
                             <h6>
@@ -92,12 +100,7 @@
                                     <li><a href="http://crude-env.sse8r8qfq2.us-east-2.elasticbeanstalk.com/" class="button fit">View App</a></li>
                                 </ul>
                             </div>
-                            <div class="col-4 col-12-small">
-                                <ul class="actions stacked">
 
-                                    <li><a href="https://github.com/nanakwafo/dmt" class="button fit">code</a></li>
-                                </ul>
-                            </div>
                             <div class="col-4 col-12-small">
                                 <ul class="actions stacked">
 
@@ -119,8 +122,13 @@
                             <h3>Inventory Management Application</h3>
                         </header>
                         <p>
-                            <!--Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>-->
+                            This is a web application that I developed based on a generic requirement from sales store. The main functionality of this application is to manage all aspect of sales for a store. With my knowledge and experience in docker I have containerised this application, hosted it on my aws ec2 instance and populated with dummy data
 
+                            Below are the login credentials 
+
+                            Username:admin
+
+                            Password:12345
                         <div class="col-12 col-12-small">
 
                         <h6>
@@ -142,12 +150,7 @@
                                     <li><a href="http://13.59.4.27:8088/" class="button fit">View App</a></li>
                                 </ul>
                             </div>
-                            <div class="col-4 col-12-small">
-                                <ul class="actions stacked">
 
-                                    <li><a href="https://github.com/nanakwafo/inventoryapp" class="button fit">code</a></li>
-                                </ul>
-                            </div>
                             <div class="col-4 col-12-small">
                                 <ul class="actions stacked">
 
