add projects description1

--- a/solutions.html
+++ b/solutions.html
@@ -68,14 +68,14 @@
                         <header class="major">
                             <h3>Crude Oil processing tool</h3>
                         </header>
-                        <p>
+                        <br>
                             This is a bespoke web application designed using the monolithic architecture of software development.its main functionality is to generate custom reports after crude oil data from their various clients side are entered into the system.
 
                             The application is deployed on windows server in-house for the client, which is  still in use and increasing productivity .
 
-                            A prototype of the application is what I have deployed here on my aws ec2 instance with dummy data.
+                            A prototype of the application is what I have deployed here on my aws ec2 instance with dummy data.</br>
 
-                            Below are the login credentials 
+                            Below are the login credentials </br>
 
                             Username:admin
 
@@ -122,9 +122,9 @@
                             <h3>Inventory Management Application</h3>
                         </header>
                         <p>
-                            This is a web application that I developed based on a generic requirement from sales store. The main functionality of this application is to manage all aspect of sales for a store. With my knowledge and experience in docker I have containerised this application, hosted it on my aws ec2 instance and populated with dummy data
+                            This is a web application that I developed based on a generic requirement from sales store. The main functionality of this application is to manage all aspect of sales for a store. With my knowledge and experience in docker I have containerised this application, hosted it on my aws ec2 instance and populated with dummy data</br>
 
-                            Below are the login credentials 
+                            Below are the login credentials </br>
 
                             Username:admin
 
